--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{2540C748-1EA4-41BB-9C6D-CEC6585B99EC}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kiosk_Client</RootNamespace>
+    <RootNamespace>KioskClient</RootNamespace>
     <AssemblyName>Kiosk-Client</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
@@ -17,9 +17,10 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <PackageCertificateThumbprint>BCC7C68DA2D80AD25B8D2559E20832ECC5A6891D</PackageCertificateThumbprint>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
+    <PackageCertificateThumbprint>7E99F8985852D55D73D57BB0D5F5E456CE2770AD</PackageCertificateThumbprint>
     <PackageCertificateKeyFile />
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -201,6 +202,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="City of Stanton.pfx" />
     <None Include="Kiosk-Client_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
