--- a/src/KioskLibrary/KioskLibrary.csproj
+++ b/src/KioskLibrary/KioskLibrary.csproj
@@ -122,14 +122,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
-    <Compile Include="Actions\LifecycleBehavior.cs" />
-    <Compile Include="Actions\Ordering.cs" />
-    <Compile Include="Actions\Orchistration.cs" />
+    <Compile Include="Orchestration\LifecycleBehavior.cs" />
+    <Compile Include="Common\Ordering.cs" />
+    <Compile Include="Orchestration\Orchestration.cs" />
     <Compile Include="Actions\SlideshowAction.cs" />
     <Compile Include="Actions\ImageAction.cs" />
     <Compile Include="Actions\WebsiteAction.cs" />
     <Compile Include="Converters\ActionConverter.cs" />
     <Compile Include="IsExternalInit.cs" />
+    <Compile Include="Orchestration\PollingInterval.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\KioskLibrary.rd.xml" />
   </ItemGroup>
@@ -142,6 +143,7 @@
     <None Include="City of Stanton.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
     <Reference Include="System.Text.Json, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
