--- a/src/KioskLibrary/KioskLibrary.csproj
+++ b/src/KioskLibrary/KioskLibrary.csproj
@@ -123,7 +123,9 @@
   <ItemGroup>
     <Compile Include="Actions\Action.cs" />
     <Compile Include="Common\Constants.cs" />
+    <Compile Include="Common\OrchestrationSource.cs" />
     <Compile Include="DataSerialization\Converter.cs" />
+    <Compile Include="Helpers\HttpHelper.cs" />
     <Compile Include="Orchestration\LifecycleBehavior.cs" />
     <Compile Include="Common\Ordering.cs" />
     <Compile Include="Orchestration\OrchestrationInstance.cs" />
@@ -132,7 +134,8 @@
     <Compile Include="Converters\ActionConverter.cs" />
     <Compile Include="IsExternalInit.cs" />
     <Compile Include="Orchestration\Orchestrator.cs" />
-    <Compile Include="Orchestration\PollingInterval.cs" />
+    <Compile Include="PageArguments\MainPageArguments.cs" />
+    <Compile Include="PageArguments\SettingsPageArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\ApplicationStorage.cs" />
     <EmbeddedResource Include="Properties\KioskLibrary.rd.xml" />
