--- a/OrchestrationPollingManager/OrchestrationPollingManager.csproj
+++ b/OrchestrationPollingManager/OrchestrationPollingManager.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A33DD7F-A863-43D1-A2C0-8EE46CFAE78F}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{10E836FF-0D71-4C2D-93F0-BBFE0E466E79}</ProjectGuid>
+    <OutputType>winmdobj</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KioskLibrary</RootNamespace>
-    <AssemblyName>KioskLibrary</AssemblyName>
+    <RootNamespace>OrchestrationPollingManager</RootNamespace>
+    <AssemblyName>OrchestrationPollingManager</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.18362.0</TargetPlatformVersion>
@@ -16,7 +16,7 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <LangVersion>9.0</LangVersion>
+    <AllowCrossPlatformRetargeting>false</AllowCrossPlatformRetargeting>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -121,24 +121,8 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Actions\Action.cs" />
-    <Compile Include="Common\Constants.cs" />
-    <Compile Include="Common\OrchestrationSource.cs" />
-    <Compile Include="DataSerialization\Converter.cs" />
-    <Compile Include="Helpers\HttpHelper.cs" />
-    <Compile Include="Orchestration\LifecycleBehavior.cs" />
-    <Compile Include="Common\Ordering.cs" />
-    <Compile Include="Orchestration\OrchestrationInstance.cs" />
-    <Compile Include="Actions\ImageAction.cs" />
-    <Compile Include="Actions\WebsiteAction.cs" />
-    <Compile Include="Converters\ActionConverter.cs" />
-    <Compile Include="IsExternalInit.cs" />
-    <Compile Include="Orchestration\Orchestrator.cs" />
-    <Compile Include="PageArguments\MainPageArguments.cs" />
-    <Compile Include="PageArguments\SettingsPageArguments.cs" />
+    <Compile Include="OrchestrationUpdateTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\ApplicationStorage.cs" />
-    <EmbeddedResource Include="Properties\KioskLibrary.rd.xml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
@@ -146,11 +130,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="City of Stanton.pfx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-    <Reference Include="System.Text.Json, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
+    <ProjectReference Include="..\src\KioskLibrary\KioskLibrary.csproj">
+      <Project>{3a33dd7f-a863-43d1-a2c0-8ee46cfae78f}</Project>
+      <Name>KioskLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
