--- a/src/OrchestrationPollingManager/OrchestrationPollingManager.csproj
+++ b/src/OrchestrationPollingManager/OrchestrationPollingManager.csproj
@@ -130,7 +130,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\KioskLibrary\KioskLibrary.csproj">
+    <ProjectReference Include="..\KioskLibrary\KioskLibrary.csproj">
       <Project>{3a33dd7f-a863-43d1-a2c0-8ee46cfae78f}</Project>
       <Name>KioskLibrary</Name>
     </ProjectReference>
