--- a/src/KioskLibrary/KioskLibrary.csproj
+++ b/src/KioskLibrary/KioskLibrary.csproj
@@ -124,8 +124,8 @@
     <Compile Include="Actions\Action.cs" />
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\OrchestrationSource.cs" />
-    <Compile Include="DataSerialization\Converter.cs" />
     <Compile Include="Helpers\HttpHelper.cs" />
+    <Compile Include="Helpers\SerializationHelper.cs" />
     <Compile Include="Orchestration\LifecycleBehavior.cs" />
     <Compile Include="Common\Ordering.cs" />
     <Compile Include="Orchestration\OrchestrationInstance.cs" />
