Broke UI and Library inter-dependecy. Orchestrator is now more event driven. PageArguments moved to KioskClient.

--- a/src/KioskClient/KioskClient.csproj
+++ b/src/KioskClient/KioskClient.csproj
@@ -130,7 +130,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\PageArguments\MainPageArguments.cs" />
     <Compile Include="Pages\PagesHelper.cs" />
+    <Compile Include="Pages\PageArguments\SettingsPageArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
