--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -83,7 +83,7 @@ jobs:
 
     - name: Build Solution
       # run: MSBuild.exe KioskClient.sln /p:UseSharedCompilation=false /p:Platform=x86 /p:AppxBundle=$env:AppxBundle /p:AppxBundlePlatforms="x86|x64" /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword="${{ secrets.CODE_SIGNING_PFX_PASSWORD }}" /restore
-      run: MSBuild.exe KioskClient.sln /p:UseSharedCompilation=false /p:Platform=x86 /p:AppxBundle=$env:AppxBundle /p:AppxBundlePlatforms="x86|x64" /restore
+      run: MSBuild.exe KioskClient.sln /p:UseSharedCompilation=false /p:Platform=x86 /p:AppxBundle=$env:AppxBundle /p:AppxBundlePlatforms="x86" /restore
       env:
         AppxBundle: Always
         BuildMode: StoreUpload
