--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,11 +65,10 @@ steps:
     platform: 'x86'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/t:KioskClientDeployment:Rebuild
-                  /p:AppxBundlePlatforms="$(buildPlatform)"
+    msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)"
                   /p:AppxPackageDir="$(appxPackageDir)"
                   /p:AppxBundle=Always
-                  /p:UapAppxPackageBuildMode=StoreUpload
+                  /p:UapAppxPackageBuildMode=StoreAndSideload
                   /p:AppxPackageSigningEnabled=true
                   /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
                   /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
