--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,18 +63,16 @@ steps:
     platform: 'x86'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:Platform="x86"'
 
 - task: VSBuild@1
   inputs:
     platform: 'x64'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:Platform="x64"'
 
 - task: VSBuild@1
   inputs:
-    platform: 'x64'
+    platform: 'x86|cleanx64'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
     msbuildArgs: '/p:AppxBundlePlatforms="x86|x64"
