--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,8 @@ variables:
 - group: code-signing
 - name: solution
   value: '**/*.sln'
+- name: kioskClientProjectFile
+  value: '**/KioskClient.csproj'
 - name: buildConfiguration
   value: 'Release'
 - name: appxPackageDir
@@ -59,25 +61,39 @@ steps:
       $store.Close()
 
 - task: VSBuild@1
+  displayName: 'Build Kiosk Client (x86)'
   inputs:
     platform: 'x86'
-    solution: '$(solution)'
+    solution: '$(kioskClientProjectFile)'
     configuration: '$(buildConfiguration)'
+    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+                  /Consoleloggerparameters:verbosity=minimal'
 
 - task: VSBuild@1
+  displayName: 'Build Kiosk Client (x64)'
   inputs:
     platform: 'x64'
-    solution: '$(solution)'
+    solution: '$(kioskClientProjectFile)'
     configuration: '$(buildConfiguration)'
+    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+                  /Consoleloggerparameters:verbosity=minimal'
+
+- task: VSBuild@1
+  displayName: 'Build Kiosk Client (arm)'
+  inputs:
+    platform: 'arm'
+    solution: '$(kioskClientProjectFile)'
+    configuration: '$(buildConfiguration)'
+    msbuildArgs: '/Fileloggerparameters:verbosity=quiet
+                  /Consoleloggerparameters:verbosity=minimal'
 
 - task: VSBuild@1
   inputs:
-    platform: 'x86|cleanx64'
     solution: '$(solution)'
     configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:AppxBundlePlatforms="x86|x64"
+    msbuildArgs: '/p:platform=x64 /p:platform=x86 /p:platform=arm
+                  /p:AppxBundlePlatforms="x86|x64|arm"
                   /p:AppxPackageDir="$(appxPackageDir)"
-                  /p:UapAppxPackageBuildMode=StoreAndSideload
                   /p:AppxPackageSigningEnabled=true
                   /p:PackageCertificateThumbprint="$(signingCert.thumbprint)"
                   /p:PackageCertificateKeyFile="$(mySecureFile.secureFilePath)"
