--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,11 +100,10 @@ steps:
   displayName: 'Package Kiosk Client'
   inputs:
     solution: '$(deploymentProjectFile)'
-    msbuildArchitecture: 'x64'
+    msbuildArchitecture: 'x86'
     configuration: '$(buildConfiguration)'
     clean: true
-    msbuildArguments: '/p:platform=x64 /p:platform=x86
-                      /p:AppxBundlePlatforms="x86|x64"
+    msbuildArguments: '/p:AppxBundlePlatforms="x86|x64"
                       /Fileloggerparameters:verbosity=quiet
                       /Consoleloggerparameters:verbosity=minimal
                       /p:AppxPackageDir="$(appxPackageDir)"
